--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -6,5 +6,6 @@ COPY . .
 RUN npm run build
 
 FROM nginx
+EXPOSE 80
 COPY --from=builder /app/build /usr/share/nginx/html
 # the default CMD for ngnix container is to start ngnix so we don't have to add it here
