--- a/complex-app/travis.yml
+++ b/complex-app/travis.yml
@@ -20,3 +20,16 @@ after_success:
   - docker push -t real-nginx-image-id ./nginx
   - docker push -t real-server--image-id ./server
   - docker push -t real-worker-image-id ./worker
+
+
+deploy:
+  provider: elasticbeanstalk
+  region: 'us-east-1'
+  app: 'multi-docker'
+  env: 'MultiDocker-env'
+  bucket_name: 'elasticbeanstalk-us-east-1-923445559289'
+  bucket_path: 'docker-multi'
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
